WIP adding table information